# code-to-wiki

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.requirements/: meta.json  negative-requirement.md
scripts/: install-latest.sh  release.sh  skill-install.sh
skills/code-to-wiki/: SKILL.md
skills/wiki-incremental-update/: SKILL.md
skills/wiki-lookup/: SKILL.md
skills/wiki-metadata-sync/: SKILL.md
src/codetowiki/: __init__.py  cli.py  wiki_format_check.py
src/codetowiki/wiki_incremental/: __init__.py  change_detection.py  citation_cleanup.py  cli.py  format_validation.py  incremental_index.py  index_builder.py  json_utils.py  pattern_inference.py
tests/: test_change_detection.py  test_cli.py  test_format_validation.py  test_incremental_index.py  test_index_builder.py
