[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61" ]

[project]
name = "codetowiki"
version = "0.1.0"
description = "Turn code into structured, indexed Wiki documentation (reference index only, no external knowledge base)."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [  ]

optional-dependencies.fast = [ "orjson" ]
scripts.codetowiki = "codetowiki.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.4.2",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = [ "codetowiki", "codetowiki.wiki_incremental" ]

[tool.ruff]
target-version = "py39"
line-length = 120
exclude = [
  ".git",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
  "venv",
]

output-format = "full"
format.docstring-code-format = true

lint.select = [ "E4", "E7", "E9", "F", "UP" ]
lint.extend-ignore = [ "E402" ]
lint.fixable = [ "ALL" ]
lint.extend-safe-fixes = [ "UP" ]
